--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -84,6 +84,9 @@ jobs:
         sed -i '/CONFIG_CPU_FREQ_GOV_SCHEDUTIL/a\CONFIG_CPU_FREQ_GOV_PERFORMANCE=y' target/linux/x86/64/config-6.1
         sed -i "s/set network.globals.ula_prefix='auto'//g" package/base-files/files/bin/config_generate
         sed -i 's/192.168.1.1/192.168.50.1/g' package/base-files/files/bin/config_generate
+        sed -i "s/set network.globals.ula_prefix='auto'//g" package/base-files/luci2/bin/config_generate
+        sed -i 's/192.168.1.1/192.168.50.1/g' package/base-files/luci2/bin/config_generate
+        sed -i 's/192.168.1.1/192.168.50.1/g' package/base-files/Makefile
         sed -i 's/$1$V4UetPzk$CYXluq4wUazHjmCDBCqXF.:0:0:99999:7:::/$1$eK1Ot.KS$t3PuFw0Az1qM6Plz2Ki9P0:19541:0:99999:7:::/g' package/lean/default-settings/files/zzz-default-settings
         sed -i 's/KERNEL_PATCHVER:=6.1/KERNEL_PATCHVER:=6.6/g' target/linux/x86/Makefile
         sed -i '/customized in this file/a net.netfilter.nf_conntrack_max=655350' package/base-files/files/etc/sysctl.conf
