--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -90,6 +90,7 @@ jobs:
         sed -i '/CONFIG_CPU_FREQ_GOV_SCHEDUTIL/a\CONFIG_CPU_FREQ_GOV_PERFORMANCE=y' target/linux/x86/64/config-6.6
         sed -i 's/CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL/CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE/g' target/linux/x86/64/config-6.12
         sed -i '/CONFIG_CPU_FREQ_GOV_SCHEDUTIL/a\CONFIG_CPU_FREQ_GOV_PERFORMANCE=y' target/linux/x86/64/config-6.12
+        sed -i 's/CONFIG_DRM_I915=y/# CONFIG_DRM_I915=y/g' target/linux/x86/64/config-6.12
         sed -i "s/set network.globals.ula_prefix='auto'//g" package/base-files/files/bin/config_generate
         sed -i 's/192.168.1.1/192.168.50.1/g' package/base-files/files/bin/config_generate
         sed -i "s/set network.globals.ula_prefix='auto'//g" package/base-files/luci2/bin/config_generate
