--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -67,9 +67,12 @@ jobs:
         ./scripts/feeds update -a
         ./scripts/feeds install -a -f
         cd ..
+        sudo git clone -b main --single-branch --filter=blob:none https://github.com/1345695/lede
         sudo git clone https://github.com/kenzok8/openwrt-packages pack
         sudo git clone -b v5-lua https://github.com/sbwml/luci-app-mosdns mosdns-lua
         sudo git clone -b v5 https://github.com/sbwml/luci-app-mosdns mosdns-v5
+        sudo cp -r lede/background/  openwrt/package/lean/luci-theme-argon/htdocs/luci-static/argon/background
+        sudo cp -r lede/files/ openwrt/files
         sudo cp -r pack/luci-app-adguardhome/ openwrt/package/lean/luci-app-adguardhome
         sudo cp -r mosdns-lua/luci-app-mosdns/ openwrt/package/lean/luci-app-mosdns
         sudo cp -r mosdns-v5/mosdns/ openwrt/package/lean/mosdns
@@ -103,7 +106,7 @@ jobs:
         sudo git clone -b lede https://github.com/pymumu/luci-app-smartdns.git package/lean/luci-app-smartdns
         sudo git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git package/lean/luci-theme-argon
         sudo git clone -b 18.06 https://github.com/jerrykuku/luci-app-argon-config.git package/lean/luci-app-argon-config
-        sudo wget https://raw.githubusercontent.com/1345695/Actions-OpenWrt/main/background/1080.mp4 -P package/lean/luci-theme-argon/htdocs/luci-static/argon/background
+
         sudo rm -rf feeds/packages/net/v2ray-geodata
         sudo rm -rf feeds/packages/net/mosdns
         sudo rm -rf feeds/packages/net/smartdns
