--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -71,7 +71,6 @@ jobs:
         sudo git clone https://github.com/kenzok8/openwrt-packages pack
         sudo git clone -b v5-lua https://github.com/sbwml/luci-app-mosdns mosdns-lua
         sudo git clone -b v5 https://github.com/sbwml/luci-app-mosdns mosdns-v5
-        sudo cp -r lede/background/  openwrt/package/lean/luci-theme-argon/htdocs/luci-static/argon/background
         sudo cp -r lede/files/ openwrt/files
         sudo cp -r pack/luci-app-adguardhome/ openwrt/package/lean/luci-app-adguardhome
         sudo cp -r mosdns-lua/luci-app-mosdns/ openwrt/package/lean/luci-app-mosdns
@@ -79,11 +78,6 @@ jobs:
         sudo cp -r mosdns-v5/v2dat/ openwrt/package/lean/v2dat
         sudo git clone -b dev --single-branch --filter=blob:none https://github.com/vernesong/OpenClash OpenClash
         sudo cp -r OpenClash/luci-app-openclash/ openwrt/package/lean/luci-app-openclash
-        sudo rm -rf pack
-        sudo rm -rf mosdns-lua
-        sudo rm -rf mosdns-v5
-        sudo rm -rf OpenClash
-        sudo rm -rf lede
         cd openwrt
         sed -i 's/KERNEL_PATCHVER:=6.6/KERNEL_PATCHVER:=6.12/g' target/linux/x86/Makefile
         sudo sed -i "s/https:\/\/github.com\/Loyalsoldier\/v2ray-rules-dat\/releases\/latest\/download/http:\/\/10.0.0.10\/meta\/geo/g" package/lean/luci-app-mosdns/root/usr/share/mosdns/mosdns.sh
@@ -107,7 +101,14 @@ jobs:
         sudo git clone -b lede https://github.com/pymumu/luci-app-smartdns.git package/lean/luci-app-smartdns
         sudo git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git package/lean/luci-theme-argon
         sudo git clone -b 18.06 https://github.com/jerrykuku/luci-app-argon-config.git package/lean/luci-app-argon-config
-
+        cd ..
+        sudo cp -r lede/background/  openwrt/package/lean/luci-theme-argon/htdocs/luci-static/argon/background
+        sudo rm -rf pack
+        sudo rm -rf mosdns-lua
+        sudo rm -rf mosdns-v5
+        sudo rm -rf OpenClash
+        sudo rm -rf lede
+        cd openwrt
         sudo rm -rf feeds/packages/net/v2ray-geodata
         sudo rm -rf feeds/packages/net/mosdns
         sudo rm -rf feeds/packages/net/smartdns
