--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -78,37 +78,33 @@ jobs:
         sudo cp -r mosdns-v5/v2dat/ openwrt/package/lean/v2dat
         sudo git clone -b dev --single-branch --filter=blob:none https://github.com/vernesong/OpenClash OpenClash
         sudo cp -r OpenClash/luci-app-openclash/ openwrt/package/lean/luci-app-openclash
+        sudo rm -rf pack
+        sudo rm -rf mosdns-lua
+        sudo rm -rf mosdns-v5
+        sudo rm -rf OpenClash
         cd openwrt
-        sed -i 's/KERNEL_PATCHVER:=6.6/KERNEL_PATCHVER:=6.12/g' target/linux/x86/Makefile
+        sudo sed -i 's/KERNEL_PATCHVER:=6.6/KERNEL_PATCHVER:=6.12/g' target/linux/x86/Makefile
         sudo sed -i "s/https:\/\/github.com\/Loyalsoldier\/v2ray-rules-dat\/releases\/latest\/download/http:\/\/10.0.0.10\/meta\/geo/g" package/lean/luci-app-mosdns/root/usr/share/mosdns/mosdns.sh
         sudo sed -i "s/https:\/\/github.com\/Loyalsoldier\/geoip\/releases\/latest\/download\/geoip-only-cn-private.dat/http:\/\/10.0.0.10\/meta\/geo\/geoip.dat/g" package/lean/luci-app-mosdns/root/usr/share/mosdns/mosdns.sh
-        sed -i 's/CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL/CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE/g' target/linux/x86/64/config-5.15
-        sed -i '/CONFIG_CPU_FREQ_GOV_SCHEDUTIL/a\CONFIG_CPU_FREQ_GOV_PERFORMANCE=y' target/linux/x86/64/config-5.15
-        sed -i 's/CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL/CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE/g' target/linux/x86/64/config-6.6
-        sed -i '/CONFIG_CPU_FREQ_GOV_SCHEDUTIL/a\CONFIG_CPU_FREQ_GOV_PERFORMANCE=y' target/linux/x86/64/config-6.6
-        sed -i 's/CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL/CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE/g' target/linux/x86/64/config-6.12
-        sed -i '/CONFIG_CPU_FREQ_GOV_SCHEDUTIL/a\CONFIG_CPU_FREQ_GOV_PERFORMANCE=y' target/linux/x86/64/config-6.12
-        sed -i 's/CONFIG_DRM_I915=y/# CONFIG_DRM_I915=y/g' target/linux/x86/64/config-6.12
-        sed -i "s/set network.globals.ula_prefix='auto'//g" package/base-files/files/bin/config_generate
-        sed -i 's/192.168.1.1/192.168.50.1/g' package/base-files/files/bin/config_generate
-        sed -i "s/set network.globals.ula_prefix='auto'//g" package/base-files/luci2/bin/config_generate
-        sed -i 's/192.168.1.1/192.168.50.1/g' package/base-files/luci2/bin/config_generate
-        sed -i 's/192.168.1.1/192.168.50.1/g' package/base-files/Makefile
-        sed -i 's/$1$V4UetPzk$CYXluq4wUazHjmCDBCqXF.:0:0:99999:7:::/$1$eK1Ot.KS$t3PuFw0Az1qM6Plz2Ki9P0:19541:0:99999:7:::/g' package/lean/default-settings/files/zzz-default-settings
-        sed -i '/customized in this file/a net.netfilter.nf_conntrack_max=655350' package/base-files/files/etc/sysctl.conf
+        sudo sed -i 's/CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL/CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE/g' target/linux/x86/64/config-5.15
+        sudo sed -i '/CONFIG_CPU_FREQ_GOV_SCHEDUTIL/a\CONFIG_CPU_FREQ_GOV_PERFORMANCE=y' target/linux/x86/64/config-5.15
+        sudo sed -i 's/CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL/CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE/g' target/linux/x86/64/config-6.6
+        sudo sed -i '/CONFIG_CPU_FREQ_GOV_SCHEDUTIL/a\CONFIG_CPU_FREQ_GOV_PERFORMANCE=y' target/linux/x86/64/config-6.6
+        sudo sed -i 's/CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL/CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE/g' target/linux/x86/64/config-6.12
+        sudo sed -i '/CONFIG_CPU_FREQ_GOV_SCHEDUTIL/a\CONFIG_CPU_FREQ_GOV_PERFORMANCE=y' target/linux/x86/64/config-6.12
+        sudo sed -i 's/CONFIG_DRM_I915=y/# CONFIG_DRM_I915=y/g' target/linux/x86/64/config-6.12
+        sudo sed -i "s/set network.globals.ula_prefix='auto'//g" package/base-files/files/bin/config_generate
+        sudo sed -i 's/192.168.1.1/192.168.50.1/g' package/base-files/files/bin/config_generate
+        sudo sed -i "s/set network.globals.ula_prefix='auto'//g" package/base-files/luci2/bin/config_generate
+        sudo sed -i 's/192.168.1.1/192.168.50.1/g' package/base-files/luci2/bin/config_generate
+        sudo sed -i 's/192.168.1.1/192.168.50.1/g' package/base-files/Makefile
+        sudo sed -i 's/$1$V4UetPzk$CYXluq4wUazHjmCDBCqXF.:0:0:99999:7:::/$1$eK1Ot.KS$t3PuFw0Az1qM6Plz2Ki9P0:19541:0:99999:7:::/g' package/lean/default-settings/files/zzz-default-settings
+        sudo sed -i '/customized in this file/a net.netfilter.nf_conntrack_max=655350' package/base-files/files/etc/sysctl.conf
         sudo git clone https://github.com/sbwml/v2ray-geodata.git package/lean/v2ray-geodata
         sudo git clone https://github.com/1345695/openwrt-smartdns.git package/lean/smartdns
         sudo git clone -b lede https://github.com/pymumu/luci-app-smartdns.git package/lean/luci-app-smartdns
         sudo git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git package/lean/luci-theme-argon
         sudo git clone -b 18.06 https://github.com/jerrykuku/luci-app-argon-config.git package/lean/luci-app-argon-config
-        cd ..
-        sudo cp -r lede/background/  openwrt/package/lean/luci-theme-argon/htdocs/luci-static/argon/background
-        sudo rm -rf pack
-        sudo rm -rf mosdns-lua
-        sudo rm -rf mosdns-v5
-        sudo rm -rf OpenClash
-        sudo rm -rf lede
-        cd openwrt
         sudo rm -rf feeds/packages/net/v2ray-geodata
         sudo rm -rf feeds/packages/net/mosdns
         sudo rm -rf feeds/packages/net/smartdns
@@ -126,7 +122,8 @@ jobs:
         ls package/lean
     - name: Load custom configuration
       run: |
-        [ -e files ] && mv files openwrt/files
+        [ -e files ] && sudo mv files openwrt/files
+        [ -e background ] && sudo mv background  openwrt/package/lean/luci-theme-argon/htdocs/luci-static/argon/background
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
 
     - name: Download package
