--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -212,14 +212,14 @@ jobs:
         echo "status=success" >> $GITHUB_OUTPUT
 
     - name: Upload firmware to release
-      uses: softprops/action-gh-release@master
-      if: steps.tag.outputs.status == 'success' && !cancelled()
+      uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ steps.tag.outputs.release_tag }}
-        body_path: release.txt
-        files: ${{ env.FIRMWARE }}/*
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ${{ env.FIRMWARE }}/firmware.bin
+        asset_name: firmware.bin
+        asset_content_type: application/octet-stream
 
     - name: Delete workflow runs
       uses: Mattraks/delete-workflow-runs@main
